compilador/Test/Cases/should-fail/test_propios_Err_Type_1.pcf
let succ5 : Nat = let app5 (f: Nat) : Nat = f 5 in app5 succ